<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:gravity="center"
              android:background="@drawable/shape_row"
              android:padding="@dimen/flash_light_padding"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <ImageView
            android:onClick="onClick"
            android:id="@+id/clean_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/tool_clean_icon"/>

        <LinearLayout
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/memory_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12dp"
                android:textColor="@color/white"
                />
            <TextView
                android:id="@+id/have_memory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12dp"
                android:textColor="@color/white_gry"
                android:text="@string/click_2_clean"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <ImageView
            android:onClick="onClick"
            android:id="@+id/flashlight_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/flashlight_off"/>

        <LinearLayout
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14dp"
                android:text="@string/flash_light_title"/>

            <TextView
                android:textColor="@color/white"
                android:id="@+id/flashlight_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10dp"
                android:text="@string/click_2_open"/>

        </LinearLayout>
    </LinearLayout>


</LinearLayout>
