<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/tool_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:clipToPadding="true"
    >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipChildren="false"
       >
        <RelativeLayout
            android:id="@+id/blurred_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:clipChildren="false">

            <ImageView
                android:id="@+id/tool_back"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:scaleType="centerCrop" />

        </RelativeLayout>
    </FrameLayout>

    <!-- Here, we customize the blurring view with values different from the defaults. -->
    <com.weather.lock.view.BlurringView
        android:id="@+id/blurring_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        app:blurRadius="11"
        app:downsampleFactor="11"
        app:overlayColor="#09FFFFFF">
    </com.weather.lock.view.BlurringView>




    <LinearLayout
        android:id="@+id/tool_layout_view"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#99000000"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="35dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/data_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="toolonClick"
                    android:src="@drawable/tool_data_on"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/tool_mobile_data_switch"
                    android:textColor="@color/white"
                    android:textSize="12dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/wifi_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="toolonClick"
                    android:src="@drawable/tool_wifi_on"/>


                <TextView
                    android:id="@+id/wifi_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/tool_wifi_switch"
                    android:textColor="@color/white"
                    android:textSize="12dp"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/blue_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="toolonClick"
                    android:scaleType="center"
                    android:src="@drawable/tool_blue_on"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/tool_bluetooth_switch"
                    android:textColor="@color/white"
                    android:textSize="12dp"/>

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="35dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/mute_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="toolonClick"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/tool_ring_switch"
                    android:textColor="@color/white"
                    android:textSize="12dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView

                    android:id="@+id/shake_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="toolonClick"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/tool_vibrate_switch"
                    android:textColor="@color/white"
                    android:textSize="12dp"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/gps_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="toolonClick"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/tool_gps_switch"
                    android:textColor="@color/white"
                    android:textSize="12dp"/>

            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/hot_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="toolonClick"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/tool_wifi_ap_switch"
                    android:textColor="@color/white"
                    android:textSize="12dp"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/light_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="toolonClick"
                    android:src="@drawable/close_s_30s"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/tool_screen_off_time_switch"
                    android:textColor="@color/white"
                    android:textSize="12dp"
                    />

            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="toolonClick"
                    />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/tool_back_"
        android:layout_above="@id/tool_layout_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:onClick="toolonClick"
        android:scaleType="centerCrop"
        />
    <LinearLayout
        android:id="@+id/tool_show_ad"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/tool_layout_view"
        android:gravity="bottom"
        android:layout_marginBottom="5dp">
    </LinearLayout>

</RelativeLayout>
